# z_polyhedrator

./: .gitignore  .gitmodules  Cargo.toml  README.md
data/: patterns.txt  patterns_2.txt
data/sparse/: .gitignore
data/sparse/3elt_dual/: 3elt_dual_transcoded.mtx
data/sparse/GD98_a/: GD98_a.compat.mtx
data/sparse/Maragal_6/: Maragal_6_b.mtx
data/sparse/Trec3/: Trec3.compat.mtx
src/: main.rs  parse.rs  spaugment.rs  spfgen.rs  spgsearx.rs  spisearx.rs  spsearch.rs  spsearx.rs  utils.rs  uzpgen.rs
utils/: plot_ast_2d.py  requirements.txt  transcode_mm.py
