[package]
name = "matrix_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sprs = "0.11.0"
text_io = "0.1.12"
bitflags = "1.3.2"
byteorder = "1.4.3"

[profile.release]
opt-level = 3

# No longer required
# [features]
# shortcut_on_invalidation = []
# shortcut_on_pattern_search = []